--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link rel="stylesheet" href="/index.css">
-  <script src="/index.js"></script>
+  <script src="/index.js" type="module"></script>
 </head>
 <body>
   <div id='root'>This is the root element</div>
