--- a/assets/index.html
+++ b/assets/index.html
@@ -9,6 +9,6 @@
   <script src="/index.js" type="module"></script>
 </head>
 <body>
-  <div id='root'>This is the root element</div>
+  <div id='root'></div>
 </body>
 </html>
